--- a/_config.yml
+++ b/_config.yml
@@ -3,21 +3,20 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Chu
+first_name: Minggui
 middle_name:
-last_name: Zhou
-chinese_name: 周矗
-email: zhou_chu@pku.edu.cn
+last_name: Teng
+chinese_name: 滕明桂
+email: minggui_teng@pku.edu.cn
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Academic pages for Minggui Teng 
 footer_text: 
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 
 icon: 🎓 # the emoji used as the favicon
 url:  # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
-last_updated: false # set to true if you want to display last updated in the footer
+last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # -----------------------------------------------------------------------------
@@ -49,11 +48,11 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: fourson # your GitHub user name
+github_username: ChipsAhoyM # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
 linkedin_username: # your LinkedIn user name
-scholar_userid: ud8V49kAAAAJ # your Google Scholar ID
+scholar_userid: BukbqcwAAAAJ # your Google Scholar ID
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
@@ -65,9 +64,10 @@ keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
+instagram_id: teddy.teng.99 # your instagram id
 
-contact_note: 
-  Email is usually the best way to reach me.
+# contact_note: 
+#   Email is usually the best way to reach me.
 
 google_analytics: UA-XXXXXXXXX # out your google-analytics code
 panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
@@ -154,8 +154,8 @@ github: [metadata]
 
 scholar:
 
-  last_name: Zhou
-  first_name: [Chu, C.]
+  last_name: Teng
+  first_name: [Minggui]
 
   style: apa
   locale: en
