--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: minggui_teng@pku.edu.cn
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Academic pages for Minggui Teng 
 footer_text: 
-  Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+  京ICP备2024071298号-1 | Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 
 icon: 🎓 # the emoji used as the favicon
 url:  # the base hostname & protocol for your site
