--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -16,3 +16,15 @@
 "Xia":
   - firstname: ["Yifei"]
     url: https://blog.variantconst.com/
+"Liang":
+  - firstname: ["Jinxiu"]
+    url: https://sherrycattt.github.io/
+"Duan":
+  - firstname: ["Peiqi"]
+    url: https://peiqi-duan.github.io/
+"Cai":
+  - firstname: ["Ziqi"]
+    url: https://caiziqi.com/
+"Ren":
+  - firstname: ["Jimmy S."]
+    url: https://www.jimmyren.com/
